[package]
edition = "2021"
name = "node-unorderset-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
tinyset = "0.4.15"

[build-dependencies]
napi-build = "2.0.1"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"
strip = "symbols"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"